<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f0f0f0"
        >


    <ImageView
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"

        android:elevation="10dp"
        android:src="@drawable/logowhite"
        app:layout_constraintBottom_toBottomOf="@+id/helpHeaderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
            android:id="@+id/helpHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/green_middle"
            android:padding="16dp"
            android:text="@string/helpHeaderTitle"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/helpHeaderText">

        <TextView
            android:id="@+id/about_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/greeny"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/helpTitle1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#ffffff"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/infoUniboard"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tips_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/greeny"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="Полезные советы и инструменты"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMusic"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tips_section"
            tools:itemCount="10"
            tools:listitem="@layout/item_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>